# Gazik

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
configs/: curve_aliases.yaml  default_qc_ranges.yaml  normalization.yaml  statistical_gate.yaml
data/raw_las/: README.md
docs/: data_collection_guidelines.md  educational_scenarios.md  rocks_and_facies.md  student_answer_format.md
examples/: example_scenario_autoencoder_mcmc.yaml  example_scenario_gas_sand.yaml  example_scenario_shaly_sand.yaml
examples/educational/: bad_hole_quality_control.yaml  carbonate_basic.yaml  coal_bed_detection.yaml  gas_sand_vs_tight_sand.yaml  shaly_sand_vs_siltstone.yaml
synthetic_well_logs/: __init__.py  __main__.py  cli.py  generator.py  rocks.py  validation.py
synthetic_well_logs/artifacts/: __init__.py  base.py  simulator.py
synthetic_well_logs/config/: __init__.py  scenario.py
synthetic_well_logs/constraints/: __init__.py  (+4 more)
tests/: conftest.py  test_autoencoder_realism.py  test_config_and_depth.py  test_curve_aliases.py  test_data_collection_formats.py  test_educational_scenarios.py  test_export_and_validation.py  test_facies_answer_checker.py  test_forward_scoring_consistency.py  test_full_hybrid2_quality.py  test_generation.py  test_hybrid2_generation.py  test_ingestion.py  test_new_rocks_forward_model.py  test_new_rocks_petrophysics.py  test_physics_constraints_extended.py  test_qc_and_resampling.py  test_required_intervals.py  test_rock_catalog.py  test_shaly_sand_resistivity.py  test_statistical_reports.py  test_student_answer_checker.py  test_windowing.py
(+95 files in other folders)
