[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "synthetic-well-logs"
version = "0.1.0"
description = "Controlled synthetic well-log generator for educational interpretation tasks"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "lasio>=0.32",
  "numpy>=2.0",
  "pandas>=2.2",
  "plotly>=5.24",
  "pydantic>=2.9",
  "PyYAML>=6.0",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.8"]
research = ["pyarrow>=17.0", "scikit-learn>=1.5", "torch>=2.4"]

[project.scripts]
synthetic-well-logs = "synthetic_well_logs.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["synthetic_well_logs"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

